Added pagination to find all products
