# src/main/java/hu/bme/edu/handmade/controllers/ProductController.java
@@ -8,11 +8,16 @@ import hu.bme.edu.handmade.web.dto.ReviewDto;
 import hu.bme.edu.handmade.web.dto.error.ResourceNotFoundException;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import org.springframework.dao.EmptyResultDataAccessException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 @RestController
 @CrossOrigin(origins="http://localhost:4200", maxAge=3600)
@@ -32,8 +37,23 @@ public class ProductController {
     }
 
     @GetMapping()
-    public List<Product> getProducts() {
-        return productService.findAllProducts();
+    public ResponseEntity<Map<String, Object>> getProducts(@RequestParam(defaultValue = "0") int page,
+                                                           @RequestParam(defaultValue = "3") int size) {
+        try {
+            Pageable paging = PageRequest.of(page, size);
+            Page<Product> pageProds = productService.findAll(paging);
+            List<Product> products = pageProds.getContent();
+
+            Map<String, Object> response = new HashMap<>();
+            response.put("products", products);
+            response.put("currentPage", pageProds.getNumber());
+            response.put("totalItems", pageProds.getTotalElements());
+            response.put("totalPages", pageProds.getTotalPages());
+
+            return ResponseEntity.ok(response);
+        } catch (Exception e) {
+            return ResponseEntity.internalServerError().build();
+        }
     }
 
     @GetMapping("/categories")
